test/TestPhases/parser/valid/UnitFrac.blc
module UnitFrac


unit s
unit Hz = 1 / s
