test/TestPhases/parser/invalid/UnitFrac2.blc
module UnitFrac2


unit s
unit Hz  = 2 / s
